@startuml
package "Gateway Layer" {
    class ProxyMiddleware
    class ProxyRequestUseCase
    class BRSParser
}

package "Routing Layer" {
    class ChooseNodeUseCase
    interface DecisionResolverPolicy
}

package "Decision (MCDM)" {
    interface RankingStrategy
    interface WeightsStrategy

    class AIRMStrategy
    class SAWStrategy
    class TopsisStrategy
    class ELECTREStrategy
    class LinearScalarizationStrategy

    class EntropyWeightsProvider
}

package "Replication" {
    class ReplicationManager
    class ReplicationPlanner
    class ReplicationRunner
    interface CompletionPolicy
}

package "Observability" {
    interface MetricsRepository
    class NodeMetrics
}

package "Discovery" {
    interface NodeRegistry
}

ProxyMiddleware --> ProxyRequestUseCase
ProxyRequestUseCase --> ChooseNodeUseCase
ProxyRequestUseCase --> ReplicationManager

ChooseNodeUseCase --> MetricsRepository
ChooseNodeUseCase --> NodeRegistry
ChooseNodeUseCase --> DecisionResolverPolicy

DecisionResolverPolicy --> RankingStrategy
DecisionResolverPolicy --> WeightsStrategy

RankingStrategy <|.. AIRMStrategy
RankingStrategy <|.. SAWStrategy
RankingStrategy <|.. TopsisStrategy
RankingStrategy <|.. ELECTREStrategy
RankingStrategy <|.. LinearScalarizationStrategy

WeightsStrategy <|.. EntropyWeightsProvider

ReplicationManager --> ReplicationPlanner
ReplicationManager --> ReplicationRunner
ReplicationManager --> CompletionPolicy

@enduml